--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,13 @@
 AddDefaultCharset utf-8
 php_flag magic_quotes_gpc Off
-ErrorDocument 404 /page404.html
+<IfModule mod_rewrite.c>
+  Options +FollowSymlinks
+  # Включаем mod_rewrite
+  RewriteEngine On
+
+  # Если это папка или файл, открываем её/его
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  # В противном случае перенаправляем на index.php
+  RewriteRule . index.php
+</IfModule>
